--- a/css/index-roadmap.css
+++ b/css/index-roadmap.css
@@ -1,8 +1,9 @@
 
 .road-map {
+    position: relative;
     width: 100%;
     max-width: 100%;
-    min-height: 600px;
+    min-height: 650px;
     left: 0;
     bottom: 0;
     background-image: url('../img/roadMap__milky-way.png'); 
@@ -34,9 +35,53 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: 650px;
+    height: 600px;
     max-width: 100%;
     margin-left: 0;
+}
+
+.road-map__vector-en {
+    background-image: url('../img/roadMap_vektor-none-en2.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 600px;
+    max-width: 100%;
+    margin-left: 0;
+}
+
+.road-map__promise {
+    position: absolute;
+    color: var(--road-map-text_color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 400;
+    font-style: italic;
+    font-size: 16px;
+    line-height: 28.96px;
+    top: 93%;
+    left: 37%;
+}
+
+@media (min-width: 450px) {
+    .road-map__promise {
+        position: absolute;
+        color: var(--road-map-text_color);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: 400;
+        font-style: italic;
+        font-size: 16px;
+        line-height: 28.96px;
+        top: 93%;
+        left: 40%;
+    }
+}
+
+p.road-map__promise {
+    margin-bottom: 0;
 }
 
 @media (min-width: 576px) {
@@ -49,6 +94,48 @@
         max-width: 100%;
         margin-left: 0;
     }
+
+    .road-map__vector-en {
+        background-image: url('../img/roadMap_vektor-none-en2.png');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 850px;
+        max-width: 100%;
+        margin-left: 0;
+    }
+
+    .road-map__promise {
+        position: absolute;
+        color: var(--road-map-text_color);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: 400;
+        font-style: italic;
+        font-size: 20px;
+        line-height: 28.96px;
+        top: 93%;
+        left: 40%;
+    }
+
+    @media (min-width: 700px) {
+        .road-map__promise {
+            position: absolute;
+            color: var(--road-map-text_color);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-weight: 400;
+            font-style: italic;
+            font-size: 20px;
+            line-height: 28.96px;
+            top: 93%;
+            left: 42%;
+        }
+    }
+
+    
 }
 
 @media (min-width: 768px) {
@@ -73,6 +160,62 @@
         max-width: 100%;
         margin-left: 0;
     }
+
+    .road-map__vector-en {
+        background-image: url('../img/roadMap_vektor-none-en2.png');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 1150px;
+        max-width: 100%;
+        margin-left: 0;
+    }
+
+    .road-map__promise {
+        position: absolute;
+        color: var(--road-map-text_color);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: 400;
+        font-style: italic;
+        font-size: 20px;
+        line-height: 28.96px;
+        top: 93%;
+        left: 42%;
+    }
+
+    @media (min-width: 850px) {
+        .road-map__promise {
+            position: absolute;
+            color: var(--road-map-text_color);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-weight: 400;
+            font-style: italic;
+            font-size: 20px;
+            line-height: 28.96px;
+            top: 93%;
+            left: 43%;
+        }
+    }
+
+    @media (min-width: 930px) {
+        .road-map__promise {
+            position: absolute;
+            color: var(--road-map-text_color);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-weight: 400;
+            font-style: italic;
+            font-size: 20px;
+            line-height: 28.96px;
+            top: 93%;
+            left: 44%;
+        }
+    }
 }
 
 @media (min-width: 992px) {
@@ -96,6 +239,46 @@
         height: 1350px;
         max-width: 100%;
         margin-left: 0;
+    }
+
+    .road-map__vector-en {
+        background-image: url('../img/roadMap_vektor-none-en2.png');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 1350px;
+        max-width: 100%;
+        margin-left: 0;
+    }
+
+    .road-map__promise {
+        position: absolute;
+        color: var(--road-map-text_color);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: 400;
+        font-style: italic;
+        font-size: 22px;
+        line-height: 28.96px;
+        top: 93%;
+        left: 44%;
+    }
+
+    @media (min-width: 1120px) {
+        .road-map__promise {
+            position: absolute;
+            color: var(--road-map-text_color);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-weight: 400;
+            font-style: italic;
+            font-size: 22px;
+            line-height: 28.96px;
+            top: 93%;
+            left: 45%;
+        }
     }
 }
 
@@ -122,10 +305,44 @@
         max-width: 100%;
         margin-left: 0;
     }
+
+    .road-map__vector-en {
+        background-image: url('../img/roadMap_vektor-none-en2.png');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 1650px;
+        max-width: 100%;
+        margin-left: 0;
+    }
+
+    .road-map__promise {
+        position: absolute;
+        color: var(--road-map-text_color);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: 400;
+        font-style: italic;
+        font-size: 24px;
+        line-height: 28.96px;
+        top: 93%;
+        left: 45%;
+    }
 }
 
 .icon-hover {
     background-image: url('../img/roadMap_vektor-first-w.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 650px;
+    max-width: 100%;
+    margin-left: 0;
+}
+
+.icon-hover-en {
+    background-image: url('../img/roadMap_vektor-first-en2.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -144,8 +361,28 @@
     margin-left: 0;
 }
 
+.icon-hover2-en {
+    background-image: url('../img/roadMap_vektor-second-en2.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 650px;
+    max-width: 100%;
+    margin-left: 0;
+}
+
 .icon-hover3 {
     background-image: url('../img/roadMap_vektor-third-w.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 650px;
+    max-width: 100%;
+    margin-left: 0;
+}
+
+.icon-hover3-en {
+    background-image: url('../img/roadMap_vektor-third-en2.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -164,6 +401,16 @@
     margin-left: 0;
 }
 
+.icon-hover4-en {
+    background-image: url('../img/roadMap_vektor-forth-en2.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 650px;
+    max-width: 100%;
+    margin-left: 0;
+}
+
 .icon-hover5 {
     background-image: url('../img/roadMap_vektor-fifth-w.png');
     background-size: cover;
@@ -173,6 +420,17 @@
     max-width: 100%;
     margin-left: 0;
 }
+
+.icon-hover5-en {
+    background-image: url('../img/roadMap_vektor-fifth-en2.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 650px;
+    max-width: 100%;
+    margin-left: 0;
+}
+
 
 
 
