--- a/css/index-about.css
+++ b/css/index-about.css
@@ -49,6 +49,8 @@
     text-align: left;
     margin-top: 20px;
     margin-bottom: 60px;
+    height: 300px;
+    overflow: hidden;
 }
 
 .about__modal-button {
@@ -56,7 +58,7 @@
     position: absolute;
     bottom: 2%;
     right: 5%;
-    display: none;
+    display: block;
 }
 
 
