--- a/css/index-footer.css
+++ b/css/index-footer.css
@@ -5,62 +5,128 @@
     background-image: url(../img/footer__backgraund.png);
     background-size: cover;
     background-position: 20% 50%;
-
 }
 
 
 .footer__social-media {
-    display: grid;
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: repeat(5, 1fr);
-    gap: 1fr;
     max-width: 100%;
     margin-top: 100px;
-    margin-right: 10px;
+    margin-right: 15px;
+    margin-left: 15px;
+    display: none;
 }
 
-.footer__media-container:nth-child(1) {
-    grid-row: 1;
-    grid-column: 1;
+.footer__social-media-mobile {
+    max-width: 100%;
+    min-height: 150px;    
 }
 
-.footer__media-container:nth-child(2) {
-    grid-row: 1;
-    grid-column: 3;
+.footer__media-hight-line {
+    display: flex;
+    flex-direction: row;
+    margin-top: 20px;
+    gap: 5%;
+    align-items: center;
+    justify-content: center;
 }
 
-.footer__media-container:nth-child(3) {
-    grid-row: 1;
-    grid-column: 5;
+.footer__media-low-line {
+    display: flex;
+    flex-direction: row;
+    margin-top: 20px;
+    gap: 5%;
+    align-items: center;
+    justify-content: center;
 }
 
-.footer__media-container:nth-child(4) {
-    grid-row: 2;
-    grid-column: 2;
-}
-
-.footer__media-container:nth-child(5) {
-    grid-row: 2;
-    grid-column: 4;
-}
-
-
-.footer__media-container {
-    margin-top: 1rem;
+.footer__media-container-1 {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-decoration: none;
-    margin-left: 1rem;
+    width: 70px;
+    top: 10%;
+    left: 25%;
+}
+
+.footer__media-container-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    width: 70px;
+    top: 10%;
+    left: 45%;
+}
+
+.footer__media-container-3 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    width: 70px;
+    top: 10%;
+    left: 65%;
+}
+
+.footer__media-container-4 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    width: 70px;
+    top: 50%;
+    left: 35%;
+}
+
+.footer__media-container-5 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    width: 70px;
+}
+
+.footer__media-container-6 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    width: 70px;
+}
+
+.footer__media-container-7 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    width: 70px;
+}
+
+
+
+.footer__media-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    
 }
 
 .footer__media-icon {
-    width: 35px;
+    width: 45px;
 }
 
 .footer__social-media-title{
-    font-size: 14px;
+    font-size: 18px;
     font-weight: 400;
     line-height: 23px;
     letter-spacing: 0em;
@@ -105,15 +171,48 @@
     margin-top: 80px;
 }
 
-.footer__policy-title{
+.footer__policy-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer__policy-title {
     text-align: center;
     font-weight: 700;
     font-size: 20px;
     line-height: 22.66px;
     color: var(--text-main-color);
     margin-top: 50px;
+    margin-bottom: 20px;
+    margin-right: 40px;
+    background-color: transparent;
+    border-color: transparent;
+}
+
+
+.footer__policy-title:hover {
+    background-color: transparent;
+    border-color: transparent;
+}
+
+
+.footer__terms-title {
+    text-align: center;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 22.66px;
+    color: var(--text-main-color);
     margin-bottom: 50px;
     margin-right: 40px;
+    background-color: transparent;
+    border-color: transparent;
+}
+
+.footer__terms-title:hover {
+    background-color: transparent;
+    border-color: transparent;
 }
 
 .footer__policy-text {
@@ -125,13 +224,25 @@
     color: var(--text-main-color);
 }
 
+
+.modal-body {
+    max-width: 100%;
+}
+
+@media (max-width: 767px) {
+    .modal-content {
+        overflow: auto; 
+    }
+}
+
+
+
 .footer__language {
     text-decoration: none;
     text-align: center;
     font-weight: 700;
     font-size: 20px;
     line-height: 22.66px;
-    /*margin-top: 50px;*/
     margin-bottom: 50px;
     margin-left: 10px;
     color: var(--text-main-color);
@@ -141,6 +252,7 @@
     .footer__social-media {
         display: flex;
         flex-direction: row;
+        gap: 5%;
         flex: 1;
         justify-content: space-evenly;
         align-items: center;
@@ -148,6 +260,13 @@
         align-items: center;
         margin-top: 100px;
         margin: auto;
+        padding-left: 35px;
+    }
+
+    .footer__social-media-mobile {
+        max-width: 100%;
+        min-height: 150px; 
+        display: none;   
     }
 
     .footer__media-container {
@@ -218,7 +337,21 @@
         line-height: 22.66px;
         color: var(--text-main-color);
         margin-right: 4rem;
+        background-color: transparent;
+        border-color: transparent;
     }
+
+    .footer__terms-title {
+        text-align: center;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 22.66px;
+        color: var(--text-main-color);
+        margin-right: 4rem;
+        background-color: transparent;
+        border-color: transparent;
+    }
+    
 
     .footer__policy-text {
         font-weight: 400;
@@ -250,7 +383,7 @@
         align-items: center;
         max-width: 450px;
         align-items: center;
-
+        padding-left: 45px;
         margin: auto;
     }
 
@@ -287,7 +420,20 @@
         font-size: 16px;
         line-height: 22.66px;
         color: var(--text-main-color);
+        background-color: transparent;
+        border-color: transparent;
     }
+
+    .footer__terms-title {
+        text-align: center;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 22.66px;
+        color: var(--text-main-color);
+        background-color: transparent;
+        border-color: transparent;
+    }
+    
 
     .footer__policy-text {
         font-weight: 400;
@@ -320,7 +466,7 @@
         align-items: center;
         max-width: 450px;
         align-items: center;
-
+        padding-left: 55px;
         margin: auto;
     }
 
@@ -374,6 +520,19 @@
         line-height: 22.66px;
         color: var(--text-main-color);
         width: 250px;
+        background-color: transparent;
+        border-color: transparent;
+    }
+
+    .footer__terms-title {
+        text-align: center;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 22.66px;
+        color: var(--text-main-color);
+        width: 250px;
+        background-color: transparent;
+        border-color: transparent;
     }
 
     @media (min-width: 1100px) {
@@ -395,12 +554,24 @@
     }
 
 
-    .footer__policy-title{
+    .footer__policy-title {
         text-align: center;
         font-weight: 700;
         font-size: 20px;
         line-height: 22.66px;
         color: var(--text-main-color);
+        background-color: transparent;
+        border-color: transparent;
+    }
+
+    .footer__terms-title {
+        text-align: center;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 22.66px;
+        color: var(--text-main-color);
+        background-color: transparent;
+        border-color: transparent;
     }
 
     .footer__policy-text {
@@ -528,6 +699,18 @@
         font-size: 20px;
         line-height: 22.66px;
         color: var(--text-main-color);
+        background-color: transparent;
+        border-color: transparent;
+    }
+
+    .footer__terms-title {
+        text-align: center;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 22.66px;
+        color: var(--text-main-color);
+        background-color: transparent;
+        border-color: transparent;
     }
 
     .footer__policy-text {
