--- a/css/index-learning.css
+++ b/css/index-learning.css
@@ -4,7 +4,7 @@
     background-position: 50% 50%;
     max-width: 100%;
     min-height: 300px;
-    padding-bottom: 8%;
+    padding-bottom: 2%;
 }
 
 
@@ -33,7 +33,7 @@
     text-align: center;
     color: var(--text-main-color);
     margin-top: 2%;
-    margin-bottom: 10%;
+    margin-bottom: 2%;
     padding-right: 5%;
     padding-left: 5%;
     font-weight: 400;
@@ -42,7 +42,7 @@
 }
 
 .learning__arrow-shadow-left {
-    background: var(--background-color-v3);
+    background: transparent;
     background-image: url('../img/learning__arrow-left.png');
     background-size: cover;
     width: 50px;
@@ -51,7 +51,7 @@
     
 
 .learning__arrow-shadow-right {
-    background: var(--background-color-v3);
+    background: transparent;
     background-image: url('../img/learning__arrow-right.png');
     background-size: cover;
     width: 50px;
