--- a/css/index-projects.css
+++ b/css/index-projects.css
@@ -2,7 +2,7 @@
     background-color: var(--backgraund-color_projects);
     background-size: cover;
     max-width: 100%;
-    min-height: 350px;
+    min-height: 450px;
     text-align: center;
     position: relative;
 }
@@ -58,7 +58,7 @@
     flex: 1;
     align-items: start;
     position: absolute;
-    margin-bottom: 10px;
+    bottom: 60px;
     margin-left: 10px;
 }
 
